# rk3568-project

_rk3568_linaro_wy/: CMakeLists.txt  build_wyq.sh  compile_commands.json  setup_rk3566_env.sh
_rk3568_linaro_wy/.svn/: wc.db
_rk3568_linaro_wy/include/UCGUI/: ucguiCfg.h
_rk3568_linaro_wy/include/UCGUI/ucGUI/Config/: GUITouchConf.h  LCDConf.h
_rk3568_linaro_wy/include/UCGUI/ucGUI/GUI/Core/: GUI.h  GUI_VNC.h  LCD.h  LCD_ConfDefaults.h  LCD_Protected.h
_rk3568_linaro_wy/include/UCGUI/ucGUI/GUI/Widget/: HEADER.h  WIDGET.h
_rk3568_linaro_wy/include/eco/: track.h
_rk3568_linaro_wy/include/libexif/: _stdint.h  i18n.h
_rk3568_linaro_wy/include/mp4v2/mp4v2/: project.h
_rk3568_linaro_wy/include/openssl/: bio.h  blowfish.h  buffer.h  cast.h  comp.h  conf_api.h  ct.h  dsa.h  e_os2.h  engine.h  idea.h  md5.h  mdc2.h  pem.h  pkcs7.h  rand.h  rand_drbg.h  rc2.h  rc4.h  ripemd.h  safestack.h  srtp.h  ssl3.h  store.h  tls1.h  txt_db.h  ui.h  x509.h  x509v3.h
_rk3568_linaro_wy/include/rtsp_server/: RtspCaster.h
_rk3568_linaro_wy/lib/drm/: libdrm.la  libdrm.so.2.4.0  libdrm_amdgpu.la  libdrm_amdgpu.so.1.0.0  libdrm_freedreno.la  libdrm_freedreno.so.1.0.0  libdrm_intel.la  libdrm_intel.so.1.0.0  libdrm_nouveau.la  libdrm_nouveau.so.2.0.0  libdrm_radeon.la  libdrm_radeon.so.1.0.1  libkms.la  libkms.so.1.0.0
_rk3568_linaro_wy/lib/drm/pkgconfig/: libdrm.pc  libdrm_amdgpu.pc  libdrm_freedreno.pc  libdrm_intel.pc  libdrm_nouveau.pc  libdrm_radeon.pc  libdrm_vc4.pc  libkms.pc
_rk3568_linaro_wy/lib/rockchip/: libdrm.so.2.4.0  libdrm_rockchip.so.1.0.0  librockchip_mpp.so.0  librockchip_vpu.so.0
_rk3568_linaro_wy/lib/usb_camera/: libusb-1.0.la  libusb-1.0.so.0.3.0
_rk3568_linaro_wy/release_wyq/: readme.txt  start_wyq_app.sh
_rk3568_linaro_wy/src/: capture_thread.h
_rk3568_linaro_wy/src/common/: config_handler.c  queue.h  ringbuffer.h  types_def.h  xutils.c  xutils.h
_rk3568_linaro_wy/src/log/: logd.h  logd_write.c  logger.c  logger.h
_rk3568_linaro_wy/src/mpp/: mpp_decode.h  mpp_encode.c
_rk3568_linaro_wy/src/protocol/: GetSysInfo.c  GetSysInfo.h
_rk3568_linaro_wy/src/rga/: NormalRgaApi.cpp  RockchipRga.cpp  RockchipRga.h  drmrga.h  xf_rockchip_rga.h
_rk3568_linaro_wy/src/rtmp_pusher/librtmp/: amf.c  amf.h  dh.h  parseurl.c  rtmp.h  rtmp_log.c
_rk3568_linaro_wy/src/rtmp_pusher/media/: live_audio_rtmp.cpp  live_audio_rtmp.h  media_info.h
_rk3568_linaro_wy/src/rtmp_pusher/rtmp/: rtmp_cfg.cpp  rtmp_cln.cpp  rtmp_cln.h  rtmp_media.cpp  rtmp_media.h  rtmp_pusher.cpp  rtmp_pusher.h  rtmp_rmua.cpp
_rk3568_linaro_wy/src/rtsp/: rtsp_client.cpp  rtsp_server.h  zm_ts.c  zm_ts.h
_rk3568_linaro_wy/src/rtsp_srv/bm/: base64.cpp  base64.h  h_util.cpp  h_util.h  hqueue.cpp  sys_buf.cpp  sys_buf.h  sys_log.cpp  sys_os.cpp  word_analyse.cpp  xml_node.cpp  xml_node.h
_rk3568_linaro_wy/src/rtsp_srv/media/: live_audio.cpp  live_video.h  media_format.h
_rk3568_linaro_wy/src/rtsp_srv/rtp/: mjpeg_tables.cpp  rtcp.cpp  rtcp.h  rtp_tx.cpp  rtp_tx.h
_rk3568_linaro_wy/src/rtsp_srv/rtsp/: rtsp_auth.cpp  rtsp_auth.h  rtsp_cfg.cpp  rtsp_comm_cfg.h  rtsp_media.cpp  rtsp_parse.h  rtsp_srv.h
